# iConnect

./: .gitignore  Cargo.toml  GLIBC_COMPATIBILITY_ISSUE.md  README.md  README_en.md  rust-toolchain.toml
.cargo/: config.toml
deploy/: Dockerfile.build  build-all.sh  iconnect  install-client.sh  install-server.sh  proxy.py  reset-pwd.py
iconnect-web/: Cargo.toml  build.rs  pnpm-lock.yaml  pnpm-workspace.yaml
iconnect-web/frontend/: .gitignore  README.md  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
iconnect-web/frontend-lib/: index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
iconnect-web/frontend-lib/src/: easytier-frontend-lib.ts  style.css  vite-env.d.ts
iconnect-web/frontend/public/: api_meta.js
iconnect-web/frontend/src/: App.vue  main.ts  style.css
iconnect-web/locales/: app.yml
iconnect-web/migrations/: 20241026_init.sql
iconnect-web/src/: main.rs
iconnect-web/src/client_manager/: mod.rs  session.rs
iconnect-web/src/db/: mod.rs
iconnect-web/src/restful/: auth.rs  device.rs  mod.rs  network.rs  rpc.rs
iconnectd/: .clippy.toml  Cargo.toml
iconnectd/docs/: credential_peer.md
iconnectd/easytier/: Cargo.toml  LICENSE  README.md  README_CN.md
iconnectd/easytier/docs/: credential_peer.md  peer_conn_secure_mode_v3.md  relay_peer_manager_design.md
iconnectd/easytier/src/: core.rs  lib.rs  (+4 more)
iconnectd/locales/: app.yml
iconnectd/src/: cli.rs  core.rs  lib.rs  main.rs
(+347 files in other folders)
